--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,5 +1,10 @@
 * 1.x
 
+** 1.3.1
+
+This is purely a bugfix release that fixes an issue with keyboard
+interaction related to the new graph visualizations in 1.3.0.
+
 ** 1.3.0
 
 This release contains a fairly major change which is *not backward
